Cleaned up CPL tests, added a test suite, added it to All Ptidej Tests